move DTO under models